application properties and cloudinary

--- a/capstone/src/main/resources/application.properties
+++ b/capstone/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 
+spring.config.import=file:env.properties
+
+#Postgres config
+spring.datasource.username=${PG_USERNAME}
+
+
+
+spring.datasource.password=${PG_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/CAPSTONE
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
+
+
+#JWT
+spring.jwt.secret=${JWT_SECRET}
+
+
+#MAILGUN
+mailgun.domains=${MAILGUN_DOMAINS}
+mailgun.api.key=${MAILGUN_API_KEY}
+
+
+#cloudinary
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.apikey=${CLOUDINARY_KEY}
+cloudinary.secret=${CLOUDINARY_SECRET}
+
+
+
+cors.allowed-origins=http://localhost:3000,http://localhost:8080
