--- a/capstone/src/main/resources/application.properties
+++ b/capstone/src/main/resources/application.properties
@@ -29,4 +29,4 @@ cloudinary.secret=${CLOUDINARY_SECRET}
 
 
 
-cors.allowed-origins=http://localhost:3000,http://localhost:8080
+cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://localhost:8080
