--- a/capstone/src/main/resources/application.properties
+++ b/capstone/src/main/resources/application.properties
@@ -28,4 +28,4 @@ cloudinary.apikey=${CLOUDINARY_KEY}
 cloudinary.secret=${CLOUDINARY_SECRET}
 
 
-cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://localhost:8080
+cors_allowed_origins=http://localhost:3000,http://localhost:3001,http://localhost:8080
