added an variable

--- a/capstone/src/main/resources/application.properties
+++ b/capstone/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=${PG_USERNAME}
 
 
 spring.datasource.password=${PG_PASSWORD}
-spring.datasource.url=jdbc:postgresql://localhost:5432/CAPSTONE
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
